<resources>
    <string name="app_name">Sherlock</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item_header">Label</string>
    <string name="add_item_flight_number">Vluchtnummer</string>
    <string name="add_item_description">Waar is het voorwerp gevonden?</string>
    <string name="add_item_seat">Stoel</string>
    <string name="add_item_item">Voorwerp</string>
    <string name="add_item_attribute_description">Welke attributen heeft het voorwerp?</string>
    <string name="add_item_input_type">Voorwerpsoort</string>
    <string name="add_item_input_description">Omschrijving</string>
    <string name="add_item_input_location">Locatie</string>
    <string name="add_item_input_status">Status</string>
    <string name="add_item_input_brand">Merk</string>
    <string name="add_item_btn_register">Registreren</string>
    <string name="add_item_input_details">Details</string>
    <string name="add_item_input_material">Materiaal</string>
    <string name="appbar_add_item">Nieuw voorwerp</string>
    <string name="gevonden">Gevonden</string>
    <string name="lost">Verloren</string>
    <string name="menu_overzicht">Overzicht</string>
    <string name="menu_scan">Scan voorwerp</string>
    <string name="menu_gather">Ophalen</string>
    <string name="menu_out_system">Dag-overdracht</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="found">Gevonden</string>
    <string name="add_item_appbar">Nieuw voorwerp</string>
</resources>