<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_item_overview"
            android:checked="true"
            android:icon="@drawable/baseline_list_24"
            android:title="@string/menu_overzicht" />

        <item
            android:id="@+id/nav_item_scan"
            android:checked="false"
            android:icon="@drawable/baseline_qr_code_scanner_24"
            android:title="@string/menu_scan" />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_item_gather"
            android:checked="false"
            android:icon="@drawable/baseline_archive_24"
            android:title="@string/menu_gather" />

        <item
            android:id="@+id/nav_item_out_system"
            android:checked="false"
            android:icon="@drawable/baseline_unarchive_24"
            android:title="@string/menu_out_system" />

    </group>
</menu>